--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+html {height: 100%;, width: 100%}
+
 .App {
   text-align: center;
 }
@@ -7,5 +9,6 @@
      color: white;
      font-size: 1.25rem;
      margin: 0;
+     width: 100%;
      padding: 1rem;
 }
